--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,16 @@
     -fx-font-family: "Lucida Console";
 }
 
+.button.start:hover {
+    -fx-background-color: #bf6d6d;
+}
 
+.button.start:pressed {
+    -fx-pref-width: 195px;
+    -fx-pref-height: 19px;
+    -fx-font-size: 19px;
+
+}
 
 .root {
     -fx-background-color: #FEE2AD;
