--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .button.start { /* using button.start to give it priority so its not overwritten by root */
-    -fx-background-color: #F08787;
-    -fx-text-fill: white;
+    -fx-background-color: #647FBC;
+    -fx-text-fill: #FAFDD6;
     -fx-pref-width: 200px;
     -fx-pref-height: 20px;
     -fx-font-size: 20px;
@@ -8,7 +8,7 @@
 }
 
 .button.start:hover {
-    -fx-background-color: #bf6d6d;
+    -fx-background-color: #91ADC8;
 }
 
 .button.start:pressed {
@@ -18,6 +18,16 @@
 
 }
 
+.stateLabel {
+    -fx-font-family: "Lucida Console";
+    -fx-padding: 0 0 -15 0; 
+}
+
+.round {
+    -fx-font-family: "Lucida Console";
+    -fx-padding: 3 0 -10 0;
+}
+
 .root {
-    -fx-background-color: #FEE2AD;
+    -fx-background-color: #AED6CF;
 }
